Final version of supplement?

--- a/supplement-ichthyosaur_macroevolution.tex
+++ b/supplement-ichthyosaur_macroevolution.tex
@@ -155,14 +155,9 @@ Using the MBL time-scaling method created trees with a root age of \SIrange{253.
     \includegraphics[width = \textwidth, center]{supp_figures/figS8-rates_MBLspaghetti}
     \caption[Rates of discrete skeletal character evolution in Ichthyosauriformes]{\textbf{Rates of discrete skeletal character evolution in Ichthyosauriformes.} Calculated from the matrix of \textcite{Moon2019a} using 1200 time-scaled trees from the minimum branch length method. Rates of evolution are plotted in \textbf{a}, epoch-bins and \textbf{b}, equal-length 10-million-year bins. \label{fig:mbl-discrete-rates}} 
 \end{figure}
-\FloatBarrier
  
-\begin{figure}
-\caption[Rates of skull size evolution in Ichthyosauriformes]{(following
-	page) \textbf{Rates of skull size evolution in Ichthyosauriformes.}
-	Evolutionary rate results from 100 Hedman-dated phylogenies. Branches
-	are scaled and branches and taxon names coloured to the rate of skull
-	size change on that branch.} 
+\begin{figure}[h]
+    \caption[Rates of skull size evolution in Ichthyosauriformes]{(previous page) \textbf{Rates of skull size evolution in Ichthyosauriformes.} Evolutionary rate results from 100 Hedman-dated phylogenies. Branches are scaled and branches and taxon names coloured to the rate of skull size change on that branch.} 
 \end{figure} 
 \FloatBarrier
 
