first revisions to main text

--- a/supp_tables/ichthyosaur_occurrences_stratigraphy.tex
+++ b/supp_tables/ichthyosaur_occurrences_stratigraphy.tex
@@ -1,4 +1,5 @@
-%! TEX root = ../supplement-ichthyosaur_macroevolution
+%! TEX root = ../supplement-ichthyosaur_macroevolution.tex
+%! BIB file = zotero.bib
 
 \begin{longtabu}{>{\itshape}lXXSSl}
 	\caption[Occurrence stratigraphy and dates of Ichthyosauriformes included in the analyses]{{\normalsize\textbf{Occurrence stratigraphy and dates of Ichthyosauriformes included in the analyses.} Stratographical occurrences are given to the nearest ammonite or conodont biozone horizon where possible. Occurrences are converted to absolute ages using \textcite{Gradstein2012}. FAD, first appearance date; LAD, last appearance date.\label{tbl:ingroup-dates}}}\\                                                      
@@ -7,7 +8,7 @@
 	\toprule\emph{Taxon}                                 & {FAD stratigraphy}                                                                                                                 & {LAD stratigraphy}                                                                                                                 & {FAD (\si{\mega\annum})} & {LAD (\si{\mega\annum})} & {References} \\\midrule\endhead          
 	\bottomrule\endfoot
 	\bottomrule\endlastfoot
-	Acamptonectes densus                                 & \textallsc{D2D} horizon, Speeton Clay Formation, basal Hauterivian                                                                 & \emph{Simbiskites concinnus/staffi} Biozone, upper Hauterivian, Lower Cretaceous                                                   & 132.9                    & 129.4                    & \cite*{Fischer2012} \\                   
+	Acamptonectes densus                                 & \textallsc{D2D} horizon, Speeton Clay Formation, basal Hauterivian                                                                 & \emph{Simbiskites concinnus/staffi} Biozone, upper Hauterivian, Lower Cretaceous                                                   & 132.9                    & 129.4                    & \cite{Fischer2012} \\                   
 	Aegirosaurus leptospondylus                          & Malm Zeta2b, early lower Tithonian, Upper Jurassic                                                                                 & Malm Zeta2b, early lower Tithonian, Upper Jurassic                                                                                 & 153.96                   & 149.87                   & \cite{Bardet2000} \\                     
 	Arthropterygius chrisorum                            & Oxfordian, Upper Jurassic                                                                                                          & Kimmeridgian, Upper Jurassic                                                                                                       & 163.47                   & 152.06                   & \cite{Maxwell2010} \\                    
 	Athabascasaurus bitumineus                           & Lower Albian, Lower Cretaceous                                                                                                     & Lower Albian, Lower Cretaceous                                                                                                     & 113                      & 111.5                    & \cite{Druckenmiller2010} \\              
@@ -123,3 +124,5 @@
 	Wimanius odontopalatus                               & Anisian , Middle Triassic                                                                                                          & Ladinian, Middle Triassic                                                                                                          & 241.5                    & 237                      & \cite{Maisch1998a} \\                    
 	Xinminosaurus catactes                               & \emph{Nicoraella kockeli} Conodont Biozone, Pelsonian, Anisian, Middle Triassic                                                    & \emph{Nicoraella kockeli} Conodont Biozone, Pelsonian, Anisian, Middle Triassic                                                    & 244.94                   & 241.5                    & \cite{Jiang2008a} \\                     
 \end{longtabu}                                        
+
+% \addbibresource{zotero.bib}
