modified most of comments required – to sort tree use in rates

--- a/supp_tables/ichthyosaur_occurrences_stratigraphy.tex
+++ b/supp_tables/ichthyosaur_occurrences_stratigraphy.tex
@@ -446,7 +446,7 @@
                                                              & 242.57
                                                              & 240.3
                                                              &
-                                                             \cite{Repossi1902ADSISNEMCSNM,McGowan2003HoP} \\        
+                                                             \cite{Repossi1902ASISNMCSNM,McGowan2003HoP} \\        
 	Mixosaurus kuhnschneyderi                            & Upper Illyrian,
         Anisian, Middle Triassic
                                                              & lower Fassinian,
@@ -454,7 +454,7 @@
                                                              & 242.57
                                                              & 240.3
                                                              &
-                                                             \cite{Brinkmann1998NJFGPA} \\                  
+                                                             \cite{Brinkmann1998NJGPA} \\                  
 	Mixosaurus xindianensis                              & \emph{Nicoraella
         kockeli} Conodont Biozone, Pelsonian, Anisian, Middle Triassic
                                                              & \emph{Nicoraella
@@ -581,7 +581,7 @@
                                                              & 244.94
                                                              & 237
                                                              &
-                                                             \cite{Maisch2005NJFGPM} \\                     
+                                                             \cite{Maisch2005NJGPM} \\                     
 	Phantomosaurus neubigi                               &
         \emph{pulcher/robustus} Conodont Biozone, Upper Anisian, Middle Triassic
                                                              &
@@ -589,7 +589,7 @@
                                                              & 244.94
                                                              & 241.5
                                                              &
-                                                             \cite{Sander1997Amr} \\                     
+                                                             \cite{Sander1997AMR} \\                     
 	Platypterygius americanus                            & Upper Albian,
         Lower Cretaceous
                                                              & Upper Albian,
@@ -620,7 +620,8 @@
         Cretaceous
                                                              & 125
                                                              & 113
-                                                             & \cite{Kolb2009PAP} \\                       
+                                                             &
+                                                             \cite{Kolb2009PAPS} \\                       
 	Platypterygius platydactylus                         & \emph{Hoplites
         deshayesi} Ammonite Biozone, Aptian, Lower Cretaceous
                                                              & \emph{Hoplites
@@ -659,7 +660,7 @@
                                                              & 247.7
                                                              & 247.2
                                                              &
-                                                             \cite{Maisch2003NJFGP-A} \\                    
+                                                             \cite{Maisch2003NJGPAa} \\                    
 	Sclerocormus parviceps                               &
         \emph{Subcolumbites} Ammonite Biozone, Olenekian, Lower Triassic
                                                              &
@@ -697,7 +698,8 @@ columbianus} ammonite Biozone, middle Norian, Upper Triassic & 216.9
         Late Triassic
                                                              & 233.5
                                                              & 228.35
-                                                             & \cite{Camp1980PAP} \\                       
+                                                             &
+                                                             \cite{Camp1980PAPS} \\                       
 	Simbirskiasaurus birjukovi                           &
         \emph{Praeoxyteuthis pugio} Belemnite Biozone, lower Barremian, Lower
         Cretaceous                                                   &
@@ -799,7 +801,7 @@ columbianus} ammonite Biozone, middle Norian, Upper Triassic & 216.9
             \emph{Tragophyllocera ibex} Ammonite Biozone, Pliensbachian, Lower
             Jurassic                                                        &
             190.8                    & 187.56                   &
-            \cite{vonHuene1931NJFMGPBB,Maisch1997SBZNSBGPc} \\          
+            \cite{vonHuene1931NJFMGPBB,Maisch1997SBNBGP} \\          
 	Temnodontosaurus platyodon                           &
         \emph{Schlotheimia angulata} Ammonite Biozone, Hettangian
                                                              & \emph{Arnioceras
@@ -893,7 +895,7 @@ columbianus} ammonite Biozone, middle Norian, Upper Triassic & 216.9
                                                              & 241.5
                                                              & 237
                                                              &
-                                                             \cite{Maisch1998NJFGPAd} \\                    
+                                                             \cite{Maisch1998NJGPM} \\                    
 	Xinminosaurus catactes                               & \emph{Nicoraella
         kockeli} Conodont Biozone, Pelsonian, Anisian, Middle Triassic
                                                              & \emph{Nicoraella
